docs(22.5): truth refresh — SOURCE-MERGED + testai LIVE; install pilot LIVE smoke pending (#1131)
* docs(22.5): truth refresh — SOURCE-MERGED + testai LIVE; install pilot LIVE smoke pending

Adversarial cross-AI peer review (2026-05-29) demonstrated drift between
docs/faz-22-software-deployment-plan.md and the actual MERGED state:

- Status line still claimed "SOURCE-PARTIAL / install blocked until
  catalog + contract + audit gates" — but BE-020/BE-020I/BE-021A/BE-021/
  BE-022/BE-022Q/BE-023 all MERGED + LIVE on testai
- §3 work-package table marked AG-025/AG-026/AG-026A/AG-025H/BE-020/
  BE-020I/BE-021A/BE-021/BE-023/AG-027/BE-022/WEB-011/WEB-013/WEB-014
  as TODO/BLOCKED/SOURCE-PARTIAL — reality: all MERGED across 4 repos
- Today's AG-026B/C/D operator enrollment-friction trio not yet recorded

Patch:

1. docs/state/current-state.md — new "2026-05-29 PM" delta documenting
   AG-026B/C/D MERGED + HALILKOOLUB735 DPAPI hydrate proof, honest
   acceptance gate map (22.5.4 First Install Pilot SOURCE-MERGED LIVE
   smoke pending), critical residual P0 (7-Zip dispatch chain + AG-027L
   acceptance), composite numbers (~65-70% v1 weighted)

2. docs/faz-22-software-deployment-plan.md:
   - Status line: SOURCE-PARTIAL → SOURCE-MERGED + testai LIVE for
     catalog/inventory/compliance/preflight/audit; First Install Pilot
     LIVE smoke pending
   - §0.1 (2026-05-27 snapshot) retained verbatim; §0.1bis (2026-05-29
     truth refresh) added with MERGED/LIVE evidence per work-package
   - §3 work-package table — every MERGED row updated with PR# +
     commit + LIVE/SOURCE-MERGED status. AG-026B/C/D added as new rows
     with PR #26/#27/#28 evidence
   - AG-027L/AG-028/AG-029/AG-030-033/AG-036-040/BE-024-029/WEB-015
     correctly tagged TODO (still pending)

No claim is made that 7-Zip lifecycle smoke ran end-to-end this
session. Per HARD RULE — No Fake Work, the residual gap is documented
in current-state.md "Critical residual P0" block and tracked as
follow-up work.

Cr